--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Lot Size Calculator</title>
+  <title>Lot Size Calculator - Ali Khan FX</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <div class="calculator">
-    <h1>Lot Size Calculator</h1>
+    <h1>Lot Size Calculator - Ali Khan FX</h1>
 
     <div class="input-group">
       <label for="accountBalance">Account Balance ($):</label>
@@ -55,3 +55,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
